--- a/css/estilo.css
+++ b/css/estilo.css
@@ -20,6 +20,13 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color:rgb(241, 240, 233);
   }
+  .navbar-nav  a:hover{
+    border:solid rgb(109, 10, 10);
+    border-radius:5px;
+    transition:1.5s; 
+    transform: scale(1.2);
+   
+  }
   
   .logo{
       border:solid 7px;
@@ -95,6 +102,14 @@
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         margin-top: 5%;
         margin-left:10%;
+    }
+
+    .redes_sociales #facebook:hover,#instagram:hover,#twitter:hover,#youtube:hover{
+     border:solid rgb(109, 10, 10);
+    border-radius:5px;
+    transition:1.5s; 
+    cursor: pointer;
+    transform: scale(1.4);
     }
      /*---------------Estilos--------------*/
   #pie_pagina{
@@ -178,10 +193,12 @@
    #galeria img{
  width:100%;
  height:400px;
+ border: solid 5px black;
+ border-radius:5px;
 }
 
 #galeria img:hover{
-    border: 5px solid rgb(8, 8, 8);
+    border: 5px solid rgb(99, 8, 8);
     -webkit-transform: scale(1.2);
     transform: scale(1.2);
     transition: transform 2s;
